--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "jest",
-    "start": "nodemon index.js",
-    "dev": "node index.js",
+    "test": "node --test",
+    "start": "nodemon server.js",
+    "dev": "node server.js",
     "build": "echo 'Rien à build pour du JS pur 🚀'"
   },
   "keywords": [],
@@ -18,10 +19,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.2",
-    "nodemon": "^3.1.10"
-  },
-  "devDependencies": {
-    "jest": "^30.2.0",
+    "multer": "^2.0.2",
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1",
     "supertest": "^7.1.4"
   }
 }
